# axum-egui

./: .cursorrules  .gitignore  Cargo.toml  README.md  flake.nix  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
axum-egui/: Cargo.toml  build.rs
axum-egui-build/: Cargo.toml
axum-egui-build/src/: lib.rs
axum-egui-derive/: Cargo.toml
axum-egui-derive/src/: lib.rs
axum-egui-macro/: Cargo.toml
axum-egui-macro/src/: lib.rs
axum-egui-macro/tests/: compile_tests.rs  server_fn_tests.rs
axum-egui-macro/tests/ui/: double_slash.rs  double_slash.stderr  generic_type.rs  generic_type.stderr  invalid_chars.rs  invalid_chars.stderr  invalid_return_type.rs  invalid_return_type.stderr  missing_return.rs  missing_return.stderr  path_traversal.rs  path_traversal.stderr  self_param.rs  self_param.stderr  trailing_slash.rs  trailing_slash.stderr
axum-egui/examples/simple/: Cargo.toml  app.rs  main.rs
axum-egui/examples/simple/gui/: app.rs  lib.rs  mod.rs
axum-egui/examples/todo/: Cargo.toml  main.rs
axum-egui/examples/todo/gui/: app.rs  mod.rs
axum-egui/examples/todo/gui/components/: input.rs  list.rs  mod.rs
axum-egui/examples/todo/gui/state/: mod.rs  todo.rs
axum-egui/src/: assets.rs  builder.rs  core.rs  lib.rs  rpc.rs  sse.rs  ws.rs
axum-egui/src/test_assets/: app.js  index.html
axum-egui/template/: Cargo.toml  index.html  lib.rs
backend/: Cargo.toml  build.rs
backend/src/: main.rs
examples/basic/: Cargo.toml  build.rs  index.html
examples/basic/frontend/: Cargo.toml  index.html
examples/basic/frontend/src/: api.rs  lib.rs  state.rs
examples/basic/server/: Cargo.toml  build.rs
examples/basic/server/src/: main.rs
examples/basic/shared/: Cargo.toml
examples/basic/shared/src/: api.rs  lib.rs  server_fns.rs
examples/basic/src/: main.rs
examples/multi-frontend/: Cargo.toml  build.rs
examples/multi-frontend/admin-frontend/: Cargo.toml  index.html
examples/multi-frontend/admin-frontend/src/: lib.rs
examples/multi-frontend/server/: Cargo.toml  build.rs
examples/multi-frontend/server/src/: main.rs
examples/multi-frontend/shared/: Cargo.toml
examples/multi-frontend/shared/src/: lib.rs
examples/multi-frontend/src/: main.rs
examples/multi-frontend/user-frontend/: Cargo.toml  index.html
examples/multi-frontend/user-frontend/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server-fn/: Cargo.toml
server-fn-macro/: Cargo.toml
server-fn-macro/src/: lib.rs
server-fn/src/: context.rs  lib.rs  registry.rs  sse.rs  ws.rs
