[workspace]
members = ["axum-egui", "server-fn", "server-fn-macro", "examples/basic", "examples/multi-frontend"]
resolver = "2"

# Note: example frontends are intentionally NOT in the workspace.
# They're separate projects so build.rs can compile them without cargo lock deadlock.

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Axum ecosystem
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# Server functions
server-fn = { path = "server-fn" }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
