[workspace]
members = [
    "axum-egui",
    "axum-egui-build",
    "server-fn",
    "server-fn-macro",
    # Basic example with separate frontend/server crates
    "examples/basic/shared",
    "examples/basic/frontend",
    "examples/basic/server",
    # Multi-frontend example with two frontends
    "examples/multi-frontend/shared",
    "examples/multi-frontend/user-frontend",
    "examples/multi-frontend/admin-frontend",
    "examples/multi-frontend/server",
]
resolver = "2"

# Default members to build (excludes frontend crates which are wasm32-only)
# Frontend crates are built automatically via artifact dependencies
default-members = [
    "axum-egui",
    "axum-egui-build",
    "server-fn",
    "server-fn-macro",
    "examples/basic/shared",
    "examples/basic/server",
    "examples/multi-frontend/shared",
    "examples/multi-frontend/server",
]

# With artifact dependencies (RFC 3028), we can have frontend crates in the workspace.
# The server's build.rs uses the WASM artifact directly - no recursive cargo calls.

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Axum ecosystem
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# Server functions
server-fn = { path = "server-fn" }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
