[package]
name = "axum-egui-build"
version = "0.2.0"
edition = "2024"
description = "Build-time utilities for axum-egui (processes WASM frontends)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tom-lubenow/axum-egui"
keywords = ["egui", "axum", "wasm", "build", "wasm-bindgen"]
categories = ["development-tools::build-utils", "wasm"]
rust-version = "1.85"

# Zero runtime dependencies - just std
[dependencies]
