[package]
name = "axum-egui-macro"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Proc macros for axum-egui server functions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tom-lubenow/axum-egui"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
