[package]
name = "axum-egui-macro"
version = "0.2.0"
edition = "2024"
description = "Proc-macro for axum-egui server functions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tom-lubenow/axum-egui"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
