[package]
name = "axum-egui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Seamlessly embed egui frontends in axum backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tom-lubenow/axum-egui"
keywords = ["egui", "axum", "wasm", "web", "gui"]
categories = ["web-programming", "gui", "wasm"]

[features]
default = ["server"]
# Enable server-side features (axum integration)
server = ["dep:axum", "dep:rust-embed", "dep:mime_guess", "dep:tokio-stream", "dep:futures-util"]
# Enable client-side features (WASM)
client = ["dep:gloo-net", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:futures-util", "dep:web-sys", "dep:js-sys"]

[dependencies]
axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }

# Client-side dependencies
gloo-net = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["EventSource", "MessageEvent"] }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
axum = { workspace = true }
rust-embed = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
