[package]
name = "server-fn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
server-fn-macro = { path = "../server-fn-macro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Server-side deps (non-WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
tracing = "0.1"

# Client-side deps (WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
