[package]
name = "server-fn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
server-fn-macro = { path = "../server-fn-macro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Shared async primitives
futures = "0.3"

# Server-side deps (non-WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
async-stream = "0.3"
tracing = "0.1"

# Client-side deps (WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["eventsource", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
serde_urlencoded = "0.7"
