[package]
name = "server-fn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = []
# Server-side feature (axum backend)
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:async-stream",
    "dep:tracing",
    "dep:inventory",
]
# Web/WASM client feature
web = [
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:serde_urlencoded",
]
# MessagePack encoding (optional)
msgpack = ["dep:rmp-serde"]

[dependencies]
server-fn-macro = { path = "../server-fn-macro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Shared async primitives
futures = "0.3"

# Optional: MessagePack encoding
rmp-serde = { version = "1", optional = true }

# Optional: Server-side deps
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
inventory = { version = "0.3", optional = true }

# Optional: Client-side deps (WASM)
gloo-net = { version = "0.6", features = ["eventsource", "websocket"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
