[package]
name = "multi-frontend-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
axum-egui = { path = "../../axum-egui" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
server-fn = { workspace = true }
