[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# This is a standalone project (not in the workspace) so build.rs can compile it
# without cargo lock deadlock.

[lib]
crate-type = ["cdylib"]

[dependencies]
# egui ecosystem
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM - pin to match wasm-bindgen-cli version
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

# HTTP client for API calls
gloo-net = "0.6"

# Server functions
server-fn = { path = "../server-fn" }

[profile.release]
opt-level = "z"  # Optimize for size
lto = true

# Empty workspace table makes this a standalone project
[workspace]
