[package]
name = "basic-frontend"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Shared types and API functions (web mode)
basic-shared = { path = "../shared", default-features = false, features = ["web"] }

# egui
eframe = { version = "0.31", default-features = false, features = ["wgpu", "web_screen_reader"] }
egui = "0.31"

# WASM
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "HtmlCanvasElement"] }
log = "0.4"

# Serialization (for initial state)
serde = { workspace = true }
serde_json = { workspace = true }
