[package]
name = "basic-frontend"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]  # Both WASM and native

[features]
default = []
# Server-side rendering (for server function handlers)
ssr = ["axum-egui/server", "dep:axum"]
# Client-side hydration (WASM browser)
hydrate = [
    "axum-egui/client",
    "dep:eframe",
    "dep:egui",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:log",
    "dep:futures-util",
]

[dependencies]
# axum-egui framework (feature-gated)
axum-egui = { path = "../../../axum-egui", default-features = false }

# axum for handlers (ssr only)
axum = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# egui (only for hydrate/wasm)
eframe = { version = "0.31", default-features = false, features = ["wgpu", "web_screen_reader"], optional = true }
egui = { version = "0.31", optional = true }

# WASM (only for hydrate)
wasm-bindgen = { version = "=0.2.104", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "HtmlCanvasElement"], optional = true }
log = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }
