[package]
name = "basic-server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "basic-server"
path = "src/main.rs"

[dependencies]
# Shared types
basic-shared = { path = "../shared" }

# axum-egui framework
axum-egui = { path = "../../../axum-egui", features = ["server"] }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Asset embedding (with path interpolation for build.rs env vars)
rust-embed = { workspace = true, features = ["interpolate-folder-path"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Artifact dependency: the frontend WASM (RFC 3028)
# This automatically builds the frontend for wasm32 and provides the path
[build-dependencies]
axum-egui-build = { path = "../../../axum-egui-build" }
basic-frontend = { path = "../frontend", artifact = "cdylib", target = "wasm32-unknown-unknown" }
