[package]
name = "basic-shared"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
# Web/WASM: enables browser client calls
web = ["dep:gloo-net"]

[dependencies]
# Core dependencies (both targets)
serde = { workspace = true }
serde_json = { workspace = true }

# Web-only (WASM fetch)
gloo-net = { version = "0.6", optional = true }
