[package]
name = "admin_frontend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true

[workspace]
