[package]
name = "admin-frontend"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# egui
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["wgpu", "web_screen_reader"] }

# WASM
wasm-bindgen = "=0.2.104"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "HtmlCanvasElement"] }
log = "0.4"

serde = { workspace = true }
serde_json = { workspace = true }
